unpackaged/main/default/objects/OrderApi__Transaction_Line__c/OrderApi__Transaction_Line__c.object-meta.xml
<CustomObject>
    <description>Transaction Lines track the debits and credits associated with Transactions.</description>
    <label>Transaction Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>