unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Business group will auto populate, if not defined on entry, to the running user&#39;s business group (assigned in custom settings).</description>
    <inlineHelpText>**System Calculated/Override** Business group will auto populate, if not defined on entry, to the running user&#39;s business group (assigned in custom settings).</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>