unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Credit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The credit amount for the transaction. Must be zero if the debit is not equal to zero.</description>
    <inlineHelpText>The credit amount for the transaction. Must be zero if the debit is not equal to zero.</inlineHelpText>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>