unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>**System Calculated** The value of the Date field on the parent Transaction.</description>
    <formula>OrderApi__Transaction__r.OrderApi__Date__c</formula>
    <inlineHelpText>**System Calculated** The value of the Date field on the parent Transaction.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>