unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Debit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Debit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The debit amount for the transaction. Must be zero if the credit is not equal to zero.</description>
    <inlineHelpText>The debit amount for the transaction. Must be zero if the credit is not equal to zero.</inlineHelpText>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>