unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** The GL Account associated with the Transaction Line.</description>
    <inlineHelpText>**Required** The GL Account associated with the Transaction Line.</inlineHelpText>
    <label>GL Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>