unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override**  The source Invoice record that generates the transaction line.  The transaction line record inherits the Accounts Receivable GL Account specified on the source Invoice record</description>
    <inlineHelpText>**System Calculated/Override**  The source Invoice record that generates the transaction line.  The transaction line record inherits the Accounts Receivable GL Account specified on the source Invoice record</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>