unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override**  The source Invoice Line record that generates the transaction line.  The transaction line record inherits the Revenue GL Account related to the Item on the source Invoice Line record</description>
    <inlineHelpText>**System Calculated/Override**  The source Invoice Line record that generates the transaction line.  The transaction line record inherits the Revenue GL Account related to the Item on the source Invoice Line record</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>