unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the related Item record. Derived from the related Invoice Line (only populates on receivable transactions).</description>
    <inlineHelpText>**System Calculated/Override** Link to the related Item record. Derived from the related Invoice Line (only populates on receivable transactions).</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>