unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Memo__c</fullName>
    <description>**System Calculated/Override** The memo will auto-populate with information from the transaction line source from the source record memo or description.</description>
    <inlineHelpText>**System Calculated/Override** The memo will auto-populate with information from the transaction line source from the source record memo or description.</inlineHelpText>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>