unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The source Receipt record that generates the transaction line.  The transaction line record inherits the GL account of the source Receipt record.</description>
    <inlineHelpText>**System Calculated/Override** The source Receipt record that generates the transaction line.  The transaction line record inherits the GL account of the source Receipt record.</inlineHelpText>
    <label>Receipt</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>