unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Receipt_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The source Receipt Detail record that generates the transaction line.</description>
    <inlineHelpText>**System Calculated/Override** The source Receipt Detail record that generates the transaction line.</inlineHelpText>
    <label>Receipt Line</label>
    <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>