unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Receipt_Line_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Transaction Line to the reporting Receipt Line.</description>
    <inlineHelpText>Relates the Transaction Line to the reporting Receipt Line.</inlineHelpText>
    <label>Receipt Line (R)</label>
    <referenceTo>OrderApi__Receipt_Line_R__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>