unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related Sales Order Line (where applicable).</description>
    <inlineHelpText>**System Calculated** Link to related Sales Order Line (where applicable).</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>