unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Sales_Order_Line_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Transaction Line to the reporting Sales Order.</description>
    <inlineHelpText>Relates the Transaction Line to the reporting Sales Order.</inlineHelpText>
    <label>Sales Order Line (R)</label>
    <referenceTo>OrderApi__Sales_Order_Line_R__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>