unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the related Subscription.</description>
    <inlineHelpText>** System Calculated Override ** Link to the related Subscription.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Line</relationshipName>
    <type>Lookup</type>
</CustomField>