unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Subscription_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the related Subscription Line.</description>
    <inlineHelpText>** System Calculated Override ** Link to the related Subscription Line.</inlineHelpText>
    <label>Subscription Line</label>
    <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>