unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Transaction Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
    <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Transaction Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>