unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Transaction__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Transaction__c</fullName>
    <description>**Required** All Transaction Lines must be associated with a parent Transaction.</description>
    <inlineHelpText>**Required** All Transaction Lines must be associated with a parent Transaction.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>OrderApi__Transaction__c</referenceTo>
    <relationshipName>Transaction_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>