unpackaged/main/default/objects/OrderApi__Transaction_Line__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>**System Calculated** The value of the Type field on the parent Transaction.</description>
    <formula>TEXT(OrderApi__Transaction__r.OrderApi__Type__c)</formula>
    <inlineHelpText>**System Calculated** The value of the Type field on the parent Transaction.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>